--- a/src/components/womenempowerment/Womenempowerment.css
+++ b/src/components/womenempowerment/Womenempowerment.css
@@ -20,7 +20,7 @@
 
 /* Hero Section */
 .women-hero {
-  background: url("./images/grp.png") no-repeat center center/cover;
+  background: url("grp.png") no-repeat center center/cover;
   height: 100vh;
   display: flex;
   align-items: center;
