--- a/src/components/womenempowerment/Womenempowerment.css
+++ b/src/components/womenempowerment/Womenempowerment.css
@@ -20,20 +20,41 @@
 
 /* Hero Section */
 .women-hero {
-  background: url("grp.png") no-repeat center center/cover;
-  height: 100vh;
+ background: url("grp.png") no-repeat center center/cover; /* Background image */
+  height: 100vh; /* Full screen */
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
+  position: relative;
   color: white;
+  overflow: hidden;
 }
 
-.women-hero h1 {
-  font-size: 3rem;
-  font-weight: bold;
-  margin-top: 100px;
+.women-content {
+  position: relative;
+  z-index: 2;
 }
+
+.women-content h1 {
+  font-size: 2.5rem;
+  font-weight: 800;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-bottom: 20px;
+}
+
+.front-image {
+  width: 250px;
+  
+ 
+ 
+}
+
+
+
+
+
 
 /* Section Styles */
 .women-section {
