--- a/src/components/overview/Overview.css
+++ b/src/components/overview/Overview.css
@@ -89,7 +89,8 @@
     color: white;
     text-decoration: none;
     border: none;
-    padding: 14px 36px;
+    height: 50px;
+    width: 160px;
     font-size: 1.2rem;
     border-radius: 8px;
     cursor: pointer;
