--- a/src/components/health/Health.css
+++ b/src/components/health/Health.css
@@ -318,6 +318,16 @@ html {
   line-height: 1.2;
 }
 
+.author{
+  font-weight: bold;
+  text-align: end;
+  color: #fffb2c;
+  margin-right:180px;
+  font-size:27px;
+}
+.car{
+  color:black;
+}
 
 
 
@@ -467,7 +477,10 @@ html {
 
 .footer h1 { font-size: 1.7rem; font-weight: 900; margin-bottom: 13px; 
   padding: 20px;
-  color: #fffb2c; }
+  color: #fffb2c; 
+  text-align:start;
+  padding: 0 150PX;
+}
 .footer h2 { font-size: 1.5rem; font-weight: 900; margin-bottom: 13px; color: #cdefff }
 
 .footer .english { font-size: 1.8rem; font-weight: 900; margin-bottom: 13px; color: #ffffff; }
