--- a/src/components/visionmission/Visionmission.css
+++ b/src/components/visionmission/Visionmission.css
@@ -29,14 +29,15 @@
 /* HERO CARD STYLES */
 .dm-vsn-hero-card {
   display: flex;
+  width:100%;
   justify-content: center;
   align-items: center;
-  padding:18px 10px 10px; 
+  padding:18px 0px; 
 }
 
 .dm-vsn-card-inner {
   width: 90vw;
-  max-width: 900px;
+  max-width: 100%;
   max-height: 80vh;
   background: var(--dm-vsn-dark);
   border-radius: 16px;
@@ -47,12 +48,18 @@
   position: relative;
 }
 
-.dm-vsn-card-inner:hover {
-  box-shadow: 
-    0 0 20px var(--dm-vsn-accent),
-    0 0 40px var(--dm-vsn-accent),
-    0 0 60px var(--dm-vsn-accent);
+.dm-title{
+  background-color: #d32a2a;
+  text-align: center;
+  padding: 5px ;
+  margin: 5px 60px 0 60px;
+  border-radius: 12px;
+  color: white;
+  font-weight: bold;
+  font-size: 2.5rem;
 }
+
+
 
 .dm-vsn-card-media {
   display: block;
@@ -114,7 +121,7 @@
 /* STANDARDS SECTION STYLES */
 .dm-vsn-standards {
   background: #f4f4f4;
-  padding: 40px 0;
+  padding: 40px 40px;
 }
 
 .dm-vsn-standards .dm-vsn-h2 {
