--- a/src/components/entrepreneur/Entrepreneur.css
+++ b/src/components/entrepreneur/Entrepreneur.css
@@ -49,10 +49,10 @@
     text-align: center;
     font-size: 3rem;
     color: white;
-    background-color: #0d9488;
+    background-color: #157c00;
     /* Teal color for brand consistency */
     border-radius: 20px;
-    border: 7px solid #14b8a6;
+    border: 7px solid #157c00;
     /* A lighter teal border */
     padding: 10px;
 }
