--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -33,7 +33,7 @@ body {
   align-items: center;
   justify-content: space-between;
   padding: 50px 60px 60px 60px;
-  background: linear-gradient(120deg, #fff 80%, #fbeaec 100%);
+  background: linear-gradient(120deg, #fcfafa 80%, #fbeaec 100%);
   flex-wrap: wrap;
   gap: 40px;
   overflow: hidden;
