--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,27 @@ body {
   margin: 0;
   padding: 0;
   height: 100vh;
+  width: 100%;
+  margin: 0 auto;
 }
 
-@media (min-width: 1800px) {
+
+
+/* Big screens (TVs, large monitors) */
+@media (min-width: 1500px) {
   body {
-    margin-right: 15%;
-    margin-left: 15%;
+    width: 90%;           /* gives ~15% space left & right */
+    margin: 0 auto;       /* centers content */
   }
 }
+
+/* Ultra wide monitors */
+@media (min-width: 2000px) {
+  body {
+    width: 70%;    
+    margin: 0 auto;       /* more side space for ultra-wide */
+  }
+}
+
+
+
