--- a/src/components/gratitude/Gratitude.css
+++ b/src/components/gratitude/Gratitude.css
@@ -6,14 +6,13 @@
     font-family: Arial, Helvetica, sans-serif; 
   }
   
-  
-  
   /* Navbar - Mimics the header styling */
   .dm-grt-header {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
+    height: inherit;
     padding: 20px 60px;
     display: flex;
     justify-content: space-between;
@@ -23,12 +22,7 @@
     background: transparent; 
   }
   
-  .dm-grt-logo {
-    font-size: 20px;
-    font-weight: bold;
-    letter-spacing: 2px;
-    color: #fff;
-  }
+  
   
   /* Hero Section */
   .dm-grt-hero {
@@ -37,7 +31,7 @@
     justify-content: center;
     align-items: center;
     /* Assuming the cosmos.jpg file exists in your public directory */
-    background-image: url('/universe.png'); 
+    background-image: url('https://res.cloudinary.com/dgay8ba3o/image/upload/v1759742468/universe_bzez8f.png'); 
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
